Fix overflow

--- a/application/src/assets/styles/style.css
+++ b/application/src/assets/styles/style.css
@@ -57,7 +57,7 @@
 }
 
 body {
-    overflow: clip;
+    overflow-x: clip;
 }
 
 .bg-primary {
